--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "homeworks-v2",
+  "homepage": "https://alex-sapon.github.io/homeworks-v2/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,11 +9,12 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
+    "postcss-preset-env": "^7.7.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
