--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homeworks-v2",
-  "homepage": "https://alex-sapon.github.io/homeworks-v2/",
+  "homepage": "https://alex-sapon.github.io/cards/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
