--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homeworks-v2",
+  "name": "cards",
   "homepage": "https://alex-sapon.github.io/cards/",
   "version": "0.1.0",
   "private": true,
